Fixed collapsing tour box

--- a/src/scss/_calendar.scss
+++ b/src/scss/_calendar.scss
@@ -20,14 +20,14 @@
                 text-align: left;
 
                 &:before {
-                    content: '\e815';
+                    content: '\f053';
                 }
             }
             &.next {
                 text-align: right;
 
                 &:before {
-                    content: '\e813';
+                    content: '\f054';
                 }
             }
             &.prev, &.next {
